--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,53 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body,
+html {
+	width: 100%;
+	height: 100%;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  color: #424242;
+}
+
+a,
+button,
+input {
+	min-width: 44px;
+	min-height: 44px;
+}
+
 img {
-  display: block;
+	display: block;
+}
+
+.hero {
+	width: 100%;
+	min-height: 400px;
+	background-image: url('../public/images/heros/hero-image.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+.hero-inner {
+  max-width: 800px;
+}
+
+.hero-title {
+	color: #fff;
+	font-weight: 500;
+	font-size: 36px;
+}
+
+.hero-tagline {
+	color: #fff;
+	margin-top: 16px;
+	font-size: 18px;
+	font-weight: 300;
 }
