--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,15 +11,15 @@
 			href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Open+Sans&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Cari Makan</title>
+		<title>Cafe-Indonesia</title>
 	</head>
 	<body>
 		<header class="hero">
 			<div class="app-bar">
-				<span class="app-bar_logo">Cari Makan</span>
+				<span class="app-bar_logo">CafeIn</span>
 
-				<nav class="drawer">
-					<ul>
+				<nav class="drawer nav">
+					<ul class="nav-list">
 						<li class="nav-list_item">
 							<a href="#">Beranda</a>
 						</li>
@@ -74,7 +74,7 @@
 		</main>
 
 		<footer>
-			<p>copyright &copy; 2023 - Cari Makan</p>
+			<p>copyright &copy; 2023 - CafeIn</p>
 		</footer>
 	</body>
 </html>
