Menambahkan Header/Hero

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,7 +8,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Open+Sans&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Poppins&display=swap"
 			rel="stylesheet"
 		/>
 		<title>Cafe-Indonesia</title>
@@ -17,8 +17,8 @@
 		<header class="hero">
 			<div class="app-bar">
 				<span class="app-bar_logo">CafeIn</span>
-
-				<nav class="drawer nav">
+				<button id="menuButton" class="menu-button">≡</button>
+				<nav id="drawer" class="nav">
 					<ul class="nav-list">
 						<li class="nav-list_item">
 							<a href="#">Beranda</a>
@@ -39,7 +39,7 @@
 
 			<div class="hero-inner">
 				<h1 class="hero-title">Mau Makan di mana?</h1>
-				<p class="hero-tagline">Restoran terbaik dengan menu spesial ada di sini!</p>
+				<p class="hero-tagline">Restoran <span class="highlight">Terbaik</span> dengan menu spesial ada di sini!</p>
 			</div>
 		</header>
 
