--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,29 +1,20 @@
 * {
-	margin-inline-start: 0;
-	margin-inline-end: 0;
-	margin-block-end: 0;
-	margin-block-start: 0;
 	padding: 0;
+	margin: 0;
 	box-sizing: border-box;
 }
 
 body,
 html {
+	margin: 0;
+	padding: 0;
 	width: 100%;
 	height: 100%;
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
-  font-size: 12px;
-  color: #424242;
-}
-
-a,
-button,
-input {
-	min-width: 44px;
-	min-height: 44px;
+	font-family: 'Poppins', sans-serif;
+	font-size: 12px;
 }
 
 img {
@@ -31,132 +22,103 @@ img {
 }
 
 /* 
- * App Bar
- *
-*/
-
-.app-bar {
-	min-height: 55px;
-	padding-inline: 15px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: #ffffff0e;
-	backdrop-filter: blur(7px);
-	box-shadow: 0 5px 5px #0000004d;
-}
-
-.app-bar_logo {
-	height: 100%;
-	font-size: 1.5em;
-	font-weight: bold;
-	font-family: "Lobster Two", sans-serif;
-	letter-spacing: 1.5px;
-	color: wheat;
-
-}
-
-/* 
- * Navigation
- *
-*/
-
-.nav {
-  width: 70%;
-  text-align: center;
-}
-
-.nav-list {
-  width: 100%;
-}
-
-.nav-item {
-  box-sizing: border-box;
-  display: inline-block;
-  width: calc(90% / 3);
-  text-align: center;
-  line-height: 24px;
-  text-transform: uppercase;
-}
-
-.nav a {
-  text-decoration: none;
-  color: #616161;
-}
-
-.nav a:hover {
-  text-decoration: underline;
-  color: #000;
-}
-
-/* 
- * Jumbotron 
+ * Header / Hero
  *
 */
 
 .hero {
 	width: 100%;
-	min-height: 435px;
-	background-image: url('../public/images/heros/hero-image.jpg');
+	min-height: 450px;
+	background: #000 url('../public/images/heros/hero-image.jpg');
 	background-size: cover;
-	background-position: center -100px;
+	background-repeat: no-repeat;
+	background-position: -100px center;
+	box-shadow: 0 6px 8px #0000009d;
 }
 
 .hero-inner {
-  max-width: 800px;
+	max-width: 700px;
+	margin: 90px auto 0;
+	text-align: center;
+	padding: 6px;
 }
 
 .hero-title {
 	color: #fff;
-	font-weight: 500;
-	font-size: 36px;
+	font-weight: bold;
+	font-size: 40px;
+	font-family: inherit;
 }
 
 .hero-tagline {
 	color: #fff;
 	margin-top: 16px;
 	font-size: 18px;
-	font-weight: 300;
+	font-weight: bold;
 }
 
-@media screen and (min-width: 455px) {
-  .headline__content {
-	padding: 16px;
-  }
-
-  .headline__title {
-	font-size: 28px;
-  }
-
-  .headline__description {
-	font-size: 15px;
-  }
+.hero .highlight {
+	color: wheat;
 }
 
-@media screen and (max-width: 499px) {
-	.nav {
-		position: absolute;
-		width: 100px;
-		z-index: 10;
-		transform: translate(-100px, 0);
-		transition: all 0.5s ease-in;
-	}
+/* 
+ * Header -> App Bar
+ *
+*/
 
-	nav.open {
-		width: 100%;
-		transform: translate(0, 0);
-	}
+.app-bar {
+	min-height: 55px;
+	padding: 0 15px;
+	display: grid;
+	grid-template-columns: 1fr 70%;
+	grid-template-rows: 1fr;
+	overflow: hidden;
+}
 
-	.nav__item {
-		width: 100%;
-		padding: 18px 15px;
-		display: list-item;
-		list-style: none;
-		border-bottom: 1px solid #e0e0e0;
-		text-align: left;
-	}
+.app-bar_logo {
+	padding-inline: 15px;
+	font-size: 1.5em;
+	font-weight: bold;
+	font-family: 'Lobster Two', sans-serif;
+	letter-spacing: 1.5px;
+	line-height: 50px;
+	color: wheat;
+}
 
-	.hero__title {
-		font-size: 8vmin;
-	}
+.menu-button {
+	padding-inline: 15px;
+	font-size: 3em;
+	color: wheat;
+	text-align: end;
+	background: transparent;
+	border: none;
+}
+
+/* 
+ * Header -> Navigation
+ *
+*/
+
+.nav {
+	width: 100%;
+	text-align: center;
+}
+
+.nav-list_item {
+	display: inline-block;
+	width: calc(80%	 / 3);
+	text-align: center;
+	line-height: 55px;
+	text-transform: uppercase;
+}
+
+.nav a {
+	text-decoration: none;
+	font-weight: bold;
+	color: #fff;
+}
+
+.nav a:hover {
+	text-decoration: underline;
+	color: wheat;
 }
