--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,7 +39,10 @@
 
 			<div class="hero-inner">
 				<h1 class="hero-title">Mau Makan di mana?</h1>
-				<p class="hero-tagline">Restoran <span class="highlight">Terbaik</span> dengan menu spesial ada di sini!</p>
+				<p class="hero-tagline">
+					Restoran <span class="highlight">Terbaik</span> dengan menu spesial
+					<span class="highlight">ada di sini!</span>
+				</p>
 			</div>
 		</header>
 
