--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,8 +6,6 @@
 
 body,
 html {
-	margin: 0;
-	padding: 0;
 	width: 100%;
 	height: 100%;
 }
@@ -15,6 +13,7 @@ html {
 body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 12px;
+	background-color: whitesmoke;
 }
 
 img {
@@ -32,28 +31,28 @@ img {
 	background: #000 url('../public/images/heros/hero-image.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: -100px center;
-	box-shadow: 0 6px 8px #0000009d;
+	background-position: center;
+	box-shadow: 0 5px 6px #000000ab;
 }
 
 .hero-inner {
 	max-width: 700px;
 	margin: 90px auto 0;
+	padding: 15px;
 	text-align: center;
-	padding: 6px;
 }
 
 .hero-title {
 	color: #fff;
 	font-weight: bold;
-	font-size: 40px;
+	font-size: 25px;
 	font-family: inherit;
 }
 
 .hero-tagline {
 	color: #fff;
 	margin-top: 16px;
-	font-size: 18px;
+	font-size: 12px;
 	font-weight: bold;
 }
 
@@ -70,9 +69,11 @@ img {
 	min-height: 55px;
 	padding: 0 15px;
 	display: grid;
-	grid-template-columns: 1fr 70%;
-	grid-template-rows: 1fr;
+	grid-template-columns: 1fr 1fr;
 	overflow: hidden;
+	background-color: #6e67643a;
+	backdrop-filter: blur(10px);
+	box-shadow: 0 3px 10px #00000080;
 }
 
 .app-bar_logo {
@@ -106,7 +107,7 @@ img {
 
 .nav-list_item {
 	display: inline-block;
-	width: calc(80%	 / 3);
+	width: 80px;
 	text-align: center;
 	line-height: 55px;
 	text-transform: uppercase;
