--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -53,14 +53,14 @@
 				<div class="restaurants" id="restaurants">
 					<article class="restaurant-item">
 						<div class="restaurant-item_city">
-							<span class="city_inner">Kota Bandung</span>
+							<span class="city_name">Kota Bandung</span>
 						</div>
 
 						<img src="" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
 
 						<div class="restaurant-item_content">
 							<p class="restaurant-item_rating">
-								Rating : <span class="rating-inner">4.5</span>
+								Rating : <span class="rating-star">&#11088;4.5</span>
 							</p>
 
 							<h3 class="restaurant-item_title">Bandung Expresso</h3>
