--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,7 +13,7 @@ html {
 body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 12px;
-	background-color: whitesmoke;
+	background-color: #d1d1d1;
 }
 
 img {
@@ -27,7 +27,7 @@ img {
 
 .hero {
 	width: 100%;
-	min-height: 450px;
+	min-height: 425px;
 	background: #000 url('../public/images/heros/hero-image.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -44,9 +44,7 @@ img {
 
 .hero-title {
 	color: #fff;
-	font-weight: bold;
-	font-size: 25px;
-	font-family: inherit;
+	font-size: 28px;
 }
 
 .hero-tagline {
@@ -73,7 +71,7 @@ img {
 	overflow: hidden;
 	background-color: #6e67643a;
 	backdrop-filter: blur(10px);
-	box-shadow: 0 3px 10px #00000080;
+	box-shadow: 0 3px 10px #0000009f;
 }
 
 .app-bar_logo {
