--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,15 +29,15 @@
 						</li>
 
 						<li class="nav-list_item">
-							<a href="https://github.com/fawwaz-musytaqul-umam" target="_blank"
-								>Tentang</a
-							>
+							<a href="https://github.com/fawwaz-musytaqul-umam" target="_blank">
+								Tentang
+							</a>
 						</li>
 					</ul>
 				</nav>
 			</div>
 
-			<div class="hero-inner">
+			<div class="hero-content">
 				<h1 class="hero-title">Mau Makan di mana?</h1>
 				<p class="hero-tagline">
 					Restoran <span class="highlight">Terbaik</span> dengan menu spesial
@@ -50,13 +50,151 @@
 			<section class="content">
 				<h2 class="content-title">Jelajahi Restoran</h2>
 
-				<div class="restaurants" id="restaurants">
+				<div class="restaurants-wrapper" id="restaurants">
 					<article class="restaurant-item">
-						<div class="restaurant-item_city">
+						<!-- <div class="restaurant-item_city">
 							<span class="city_name">Kota Bandung</span>
+						</div> -->
+
+						<div class="restaurant-item_thumb-wrapper">
+							<img src="https://restaurant-api.dicoding.dev/images/medium/32" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
 						</div>
 
-						<img src="" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
+						<div class="restaurant-item_content">
+							<p class="restaurant-item_rating">
+								Rating : <span class="rating-star">&#11088;4.5</span>
+							</p>
+
+							<h3 class="restaurant-item_title">Bandung Expresso</h3>
+
+							<p class="restaurant-item_description">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid
+								deleniti autem, alias ex adipisci dicta eaque nihil. Aut odio accusamus
+								ex. Sapiente, reprehenderit dicta?
+							</p>
+						</div>
+					</article>
+					<article class="restaurant-item">
+						<!-- <div class="restaurant-item_city">
+							<span class="city_name">Kota Bandung</span>
+						</div> -->
+
+						<div class="restaurant-item_thumb-wrapper">
+							<img src="https://restaurant-api.dicoding.dev/images/medium/41" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
+						</div>
+
+						<div class="restaurant-item_content">
+							<p class="restaurant-item_rating">
+								Rating : <span class="rating-star">&#11088;4.5</span>
+							</p>
+
+							<h3 class="restaurant-item_title">Bandung Expresso</h3>
+
+							<p class="restaurant-item_description">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid
+								deleniti autem, alias ex adipisci dicta eaque nihil. Aut odio accusamus
+								ex. Sapiente, reprehenderit dicta?
+							</p>
+						</div>
+					</article>
+					<article class="restaurant-item">
+						<!-- <div class="restaurant-item_city">
+							<span class="city_name">Kota Bandung</span>
+						</div> -->
+
+						<div class="restaurant-item_thumb-wrapper">
+							<img src="https://restaurant-api.dicoding.dev/images/medium/07" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
+						</div>
+
+						<div class="restaurant-item_content">
+							<p class="restaurant-item_rating">
+								Rating : <span class="rating-star">&#11088;4.5</span>
+							</p>
+
+							<h3 class="restaurant-item_title">Bandung Expresso</h3>
+
+							<p class="restaurant-item_description">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid
+								deleniti autem, alias ex adipisci dicta eaque nihil. Aut odio accusamus
+								ex. Sapiente, reprehenderit dicta?
+							</p>
+						</div>
+					</article>
+					<article class="restaurant-item">
+						<!-- <div class="restaurant-item_city">
+							<span class="city_name">Kota Bandung</span>
+						</div> -->
+
+						<div class="restaurant-item_thumb-wrapper">
+							<img src="https://restaurant-api.dicoding.dev/images/medium/29" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
+						</div>
+
+						<div class="restaurant-item_content">
+							<p class="restaurant-item_rating">
+								Rating : <span class="rating-star">&#11088;4.5</span>
+							</p>
+
+							<h3 class="restaurant-item_title">Bandung Expresso</h3>
+
+							<p class="restaurant-item_description">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid
+								deleniti autem, alias ex adipisci dicta eaque nihil. Aut odio accusamus
+								ex. Sapiente, reprehenderit dicta?
+							</p>
+						</div>
+					</article>
+					<article class="restaurant-item">
+						<!-- <div class="restaurant-item_city">
+							<span class="city_name">Kota Bandung</span>
+						</div> -->
+
+						<div class="restaurant-item_thumb-wrapper">
+							<img src="https://restaurant-api.dicoding.dev/images/medium/38" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
+						</div>
+
+						<div class="restaurant-item_content">
+							<p class="restaurant-item_rating">
+								Rating : <span class="rating-star">&#11088;4.5</span>
+							</p>
+
+							<h3 class="restaurant-item_title">Bandung Expresso</h3>
+
+							<p class="restaurant-item_description">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid
+								deleniti autem, alias ex adipisci dicta eaque nihil. Aut odio accusamus
+								ex. Sapiente, reprehenderit dicta?
+							</p>
+						</div>
+					</article>
+					<article class="restaurant-item">
+						<!-- <div class="restaurant-item_city">
+							<span class="city_name">Kota Bandung</span>
+						</div> -->
+
+						<div class="restaurant-item_thumb-wrapper">
+							<img src="https://restaurant-api.dicoding.dev/images/medium/40" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
+						</div>
+
+						<div class="restaurant-item_content">
+							<p class="restaurant-item_rating">
+								Rating : <span class="rating-star">&#11088;4.5</span>
+							</p>
+
+							<h3 class="restaurant-item_title">Bandung Expresso</h3>
+
+							<p class="restaurant-item_description">
+								Berkonsep sebagai taman terbuka, resto yang tadinya bernama Grand Garden ini mengandalkan panorama Kebun Raya Bogor sebagai vitamin untuk mata. kamu bisa menyaksikan pepohonan nan hijau, rumput yang terhampar dengan air mancur di kejauhan, adem banget rasanya.
+							</p>
+						</div>
+					</article>
+					<article class="restaurant-item">
+						<!-- <div class="restaurant-item_city">
+							<span class="city_name">Kota Bandung</span>
+						</div> -->
+
+						<div class="restaurant-item_thumb-wrapper">
+							<img src="https://restaurant-api.dicoding.dev/images/medium/08" alt="Gambar Restoran" class="restaurant-item_thumbnail" />
+						</div>
 
 						<div class="restaurant-item_content">
 							<p class="restaurant-item_rating">
@@ -77,7 +215,9 @@
 		</main>
 
 		<footer>
-			<p>copyright &copy; 2023 - CafeIn</p>
+			<p>
+				-- copyright &copy; 2023 - <a href="https://github.com/fawwaz-musytaqul-umam">CafeIn</a> --
+			</p>
 		</footer>
 	</body>
 </html>
