--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,6 +14,8 @@
 		<title>Cafe-Indonesia</title>
 	</head>
 	<body>
+		<a href="#mainContent" class="skip-link" tabindex="1">Skip to content</a>
+
 		<header class="hero">
 			<div class="app-bar">
 				<a class="app-bar_logo" href="#" tabindex="-1">CafeIn</a>
@@ -47,7 +49,7 @@
 		</header>
 
 		<main>
-			<section class="content">
+			<section id="mainContent" class="content">
 				<h2 class="content-title">Jelajahi Restoran</h2>
 				<restaurants-container></restaurants-container>
 			</section>
