--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,7 +14,7 @@
 		<title>Cafe-Indonesia</title>
 	</head>
 	<body>
-		<a href="#mainContent" class="skip-link" tabindex="1">Skip to content</a>
+		<a href="#mainContent" class="skip-link">Skip to content</a>
 
 		<header class="hero">
 			<div class="app-bar">
