--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,12 +18,12 @@
 
 		<header class="hero">
 			<div class="app-bar">
-				<a class="app-bar_logo" href="#" tabindex="-1">CafeIn</a>
+				<span><a class="app-bar_logo" href="/" tabindex="-1">CafeIn</a></span>
 				<button id="menuButton" class="menu-button">≡</button>
 				<nav id="drawer" class="nav">
 					<ul class="nav-list">
 						<li class="nav-list_item">
-							<a href="#">Beranda</a>
+							<a href="/">Beranda</a>
 						</li>
 
 						<li class="nav-list_item">
