--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -31,7 +31,7 @@
 						</li>
 
 						<li class="nav-list_item">
-							<a href="https://github.com/fawwaz-musytaqul-umam" target="_blank">
+							<a href="https://github.com/fawwaz-m-umam" target="_blank">
 								Tentang
 							</a>
 						</li>
@@ -58,7 +58,7 @@
 		<footer>
 			<p>
 				-- copyright &copy; 2023 -
-				<a href="https://github.com/fawwaz-musytaqul-umam">CafeIn</a> --
+				<a href="https://github.com/fawwaz-m-umam">CafeIn</a> --
 			</p>
 		</footer>
 	</body>
