--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,7 +19,7 @@
 		<header class="hero">
 			<div class="app-bar">
 				<span><a class="app-bar_logo" href="/" tabindex="-1">CafeIn</a></span>
-				<button id="menuButton" class="menu-button">≡</button>
+				<button id="menuButton" class="menu-button" aria-label="Navigation Menu">≡</button>
 				<nav id="drawer" class="nav">
 					<ul class="nav-list">
 						<li class="nav-list_item">
@@ -31,7 +31,7 @@
 						</li>
 
 						<li class="nav-list_item">
-							<a href="https://github.com/fawwaz-m-umam" target="_blank">
+							<a href="https://github.com/fawwaz-m-umam" target="_blank" rel="noopener noreferrer">
 								Tentang
 							</a>
 						</li>
@@ -63,3 +63,5 @@
 		</footer>
 	</body>
 </html>
+
+<a href="http://" target="_blank" ></a>
