membuat app shell dan dicoding API

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,7 +27,7 @@
 						</li>
 
 						<li class="nav-list_item">
-							<a href="#">Favorit</a>
+							<a href="#/favorite">Favorit</a>
 						</li>
 
 						<li class="nav-list_item">
@@ -49,10 +49,7 @@
 		</header>
 
 		<main>
-			<section id="mainContent" class="content">
-				<h2 class="content-title">Jelajahi Restoran</h2>
-				<restaurants-container></restaurants-container>
-			</section>
+			<section id="mainContent" class="content"></section>
 		</main>
 
 		<footer>
