--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,10 +7,11 @@
 body,
 html {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 }
 
 body {
+	position: relative;
 	font-family: 'Poppins', sans-serif;
 	font-size: 12px;
 	background-color: #d1d1d1;
@@ -171,7 +172,7 @@ main {
 */
 
 .content {
-	padding: 32px;
+	padding: 30px;
 }
 
 .content-title {
@@ -218,6 +219,7 @@ restaurant-item {
 
 restaurant-item .city-name {
 	font-weight: bold;
+	color: black;
 }
 
 .restaurant-item_thumbnail {
@@ -241,18 +243,31 @@ restaurant-item .city-name {
 	font-size: 18px;
 }
 
+.restaurant-item_title a:hover {
+	color: #383838;
+	text-decoration: underline;
+}
+
+.restaurant-item_title a {
+	color: inherit;
+	text-decoration: none;
+}
+
 /* 
  * Footer
  *
 */
 
 footer {
+	position: absolute;
+	width: 100%;
 	height: 70px;
 	font-style: italic;
 	background-color: #121214;
 }
 
 footer p {
+	margin-block: 0;
 	font-size: 14px;
 	color: whitesmoke;
 	text-align: center;
