--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -52,6 +52,30 @@ a {
 }
 
 /* 
+ * Loading / Loader
+ *
+*/
+
+.loading {
+	width: 50px;
+    height: 50px;
+    border: 5px solid #f3f3f3;
+    border-top: 6px solid #3a3a3a;
+    border-radius: 100%;
+    margin: auto;
+    animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+	 from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* 
  * Header / Hero
  *
 */
@@ -162,6 +186,7 @@ a {
 main {
 	width: 100%;
 	max-width: 1250px;
+	min-height: 200px;
 	margin: auto;
 	color: #3a3a3a;
 }
