memperbarui restaurant-detail component

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,6 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Poppins&display=swap"
 			rel="stylesheet"
 		/>
+		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 		<title>Cafe-Indonesia</title>
 	</head>
 	<body>
@@ -31,7 +32,11 @@
 						</li>
 
 						<li class="nav-list_item">
-							<a href="https://github.com/fawwaz-m-umam" target="_blank" rel="noopener noreferrer">
+							<a
+								href="https://github.com/fawwaz-m-umam"
+								target="_blank"
+								rel="noopener noreferrer"
+							>
 								Tentang
 							</a>
 						</li>
@@ -49,7 +54,9 @@
 		</header>
 
 		<main>
-			<section id="mainContent" class="content"></section>
+			<section id="mainContent" class="content">
+				<div class="loading"></div>
+			</section>
 		</main>
 
 		<footer>
@@ -60,5 +67,3 @@
 		</footer>
 	</body>
 </html>
-
-<a href="http://" target="_blank" ></a>
