--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,13 +42,12 @@ a {
 	background-color: rgb(255, 200, 61);
 	border: 2px solid chocolate;
 	border-radius: 0 5px 5px 0;
-	transition: top .3s ease;
+	transition: top 0.3s ease;
 	z-index: 10;
 }
 
 .skip-link:focus {
 	top: 10px;
-
 }
 
 /* 
@@ -58,21 +57,21 @@ a {
 
 .loading {
 	width: 50px;
-    height: 50px;
-    border: 5px solid #f3f3f3;
-    border-top: 6px solid #3a3a3a;
-    border-radius: 100%;
-    margin: auto;
-    animation: spin 1s infinite linear;
+	height: 50px;
+	border: 5px solid #f3f3f3;
+	border-top: 6px solid #3a3a3a;
+	border-radius: 100%;
+	margin: auto;
+	animation: spin 1s infinite linear;
 }
 
 @keyframes spin {
-	 from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
 
 /* 
@@ -239,7 +238,7 @@ restaurant-item {
 	background-color: rgba(255, 200, 61, 0.753);
 	border-radius: 0 7px 7px 0;
 	backdrop-filter: blur(5px);
-	box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.7);	
+	box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.7);
 }
 
 restaurant-item .city-name {
@@ -252,7 +251,7 @@ restaurant-item .city-name {
 	color: whitesmoke;
 	object-fit: cover;
 	object-position: center;
-	background-color: gray
+	background-color: gray;
 }
 
 .restaurant-item_content {
@@ -263,19 +262,37 @@ restaurant-item .city-name {
 	font-weight: bold;
 }
 
-.restaurant-item_title {
+.restaurant-item_name {
 	margin-block: 5px;
 	font-size: 18px;
 }
 
-.restaurant-item_title a:hover {
+.restaurant-item_name a:hover {
 	color: #383838;
 	text-decoration: underline;
 }
 
-.restaurant-item_title a {
+.restaurant-item_name a {
 	color: inherit;
 	text-decoration: none;
+}
+
+.like {
+	bottom: 16px;
+	right: 16px;
+	position: fixed;
+	font-size: 25px;
+	background-color: #db0000;
+	color: white;
+	border: 0;
+	border-radius: 50%;
+	width: 55px;
+	height: 55px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 10;
 }
 
 /* 
