--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -56,9 +56,9 @@ a {
 */
 
 .loading {
-	width: 50px;
-	height: 50px;
-	border: 5px solid #f3f3f3;
+	width: 55px;
+	height: 55px;
+	border: 5px solid #e4e2e2;
 	border-top: 6px solid #3a3a3a;
 	border-radius: 100%;
 	margin: auto;
