--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-	position: relative;
 	font-family: 'Poppins', sans-serif;
 	font-size: 12px;
 	background-color: #d1d1d1;
@@ -56,22 +55,13 @@ a {
 */
 
 .loading {
-	width: 55px;
-	height: 55px;
+	width: 50px;
+	height: 50px;
 	border: 5px solid #e4e2e2;
 	border-top: 6px solid #3a3a3a;
 	border-radius: 100%;
 	margin: auto;
 	animation: spin 1s infinite linear;
-}
-
-@keyframes spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
 }
 
 /* 
@@ -185,8 +175,8 @@ a {
 main {
 	width: 100%;
 	max-width: 1250px;
-	min-height: 200px;
 	margin: auto;
+	padding-bottom: 80px;
 	color: #3a3a3a;
 }
 
@@ -196,7 +186,8 @@ main {
 */
 
 .content {
-	padding: 30px;
+	min-height: 35vmax;
+	padding: 32px;
 }
 
 .content-title {
@@ -277,22 +268,32 @@ restaurant-item .city-name {
 	text-decoration: none;
 }
 
+/* 
+ * Like
+ *
+*/
+
 .like {
-	bottom: 16px;
 	right: 16px;
+	bottom: 40px;
 	position: fixed;
-	font-size: 25px;
-	background-color: #db0000;
-	color: white;
-	border: 0;
-	border-radius: 50%;
-	width: 55px;
-	height: 55px;
-	cursor: pointer;
+	width: 50px;
+	height: 50px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	font-size: 25px;
+	color: white;
+	background-color: #db0000;
+	border-radius: 50%;
+	border: 0;
+	cursor: pointer;
 	z-index: 10;
+	transition: font-size .5s ease-out;
+}
+
+.liked {
+	animation: spin 1s;
 }
 
 /* 
@@ -301,8 +302,6 @@ restaurant-item .city-name {
 */
 
 footer {
-	position: absolute;
-	width: 100%;
 	height: 70px;
 	font-style: italic;
 	background-color: #121214;
@@ -324,4 +323,13 @@ footer a {
 footer a:hover {
 	color: wheat;
 	text-decoration: underline;
+}
+
+@keyframes spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
