menambahkan favorite page dan Index DB

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -65,6 +65,17 @@ a {
 }
 
 /* 
+ * Favorite
+ *
+*/
+
+.no-favorite-restaurant {
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+}
+
+/* 
  * Header / Hero
  *
 */
