--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -57,7 +57,7 @@
 		</header>
 
 		<main>
-			<section id="mainContent" class="content">
+			<section id="mainContent" class="content" tabindex="0">
 				<div class="loading"></div>
 			</section>
 		</main>
