--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -300,7 +300,7 @@ restaurant-item .city-name {
 	border: 0;
 	cursor: pointer;
 	z-index: 10;
-	transition: font-size .5s ease-out;
+	transition: font-size 0.5s ease-out;
 }
 
 .liked {
