--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -69,7 +69,7 @@ a {
  *
 */
 
-.no-favorite-restaurant {
+.empty-favorite-restaurant {
 	font-size: 14px;
 	font-weight: bold;
 	text-align: center;
